<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bobgranata.questionary.ShortQuestActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrlvShortQuest"
        android:layout_margin="7dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tvNameNet"
                android:id="@+id/tvNameNet" />

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinNameNet"
                android:entries="@array/spinNameNet"/>

            <!--============================================================================-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
                <!--android:text="@string/clientAddressStreet"-->
                <!--android:id="@+id/tvClientAddressStreet"/>-->

            <!--<EditText-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/etClientAddressStreet"/>-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
                <!--android:text="@string/clientAddressHouse"-->
                <!--android:id="@+id/tvClientAddressHouse"/>-->

            <!--<EditText-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/etClientAddressHouse"/>-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
                <!--android:text="@string/clientAddressComment"-->
                <!--android:id="@+id/tvClientAddressComment"/>-->

            <!--<EditText-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/etClientAddressComment"/>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/NumberBanks"
                android:id="@+id/tvNumberBanks"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNumberBanks"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/NumbPOSCoolCoca"
                android:id="@+id/tvNumbPOSCoolCoca"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNumbPOSCoolCoca"
                android:hint="0"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/NumbPOSCoolOther"
                android:id="@+id/tvNumbPOSCoolOther"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNumbPOSCoolOther"
                android:hint="0"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/CommonComment"
                android:id="@+id/tvShortCommonComment"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etShortCommonComment"
                android:maxLength="200"
                android:inputType="text" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbNotCalc"
                android:id="@+id/cbShortNotCalc"
                android:layout_marginTop="10dp"/>
            <!--============================================================================-->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveButton"
                android:id="@+id/btnSave"
                android:onClick="onClickSave"
                android:visibility="invisible" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/btnSaveAndSend"
                android:id="@+id/btnSaveAndSend"
                android:onClick="onClickSaveAndSend"
                android:background="@drawable/button_background"
                android:textColor="@drawable/text_color"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetButton"
                android:id="@+id/btnReset"
                android:layout_marginTop="25dp"
                android:onClick="onClickReset"
                android:background="@drawable/button_background"
                android:textColor="@drawable/text_color"/>
            <!--android:visibility="invisible"-->

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
